WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45175
[WebView unmarkAllTextMatches] will crash if the webview is already closed
https://bugs.webkit.org/show_bug.cgi?id=45175
Summary
[WebView unmarkAllTextMatches] will crash if the webview is already closed
John Sullivan
Reported
2010-09-03 08:07:43 PDT
[WebView unmarkAllTextMatches] should be robust if it's called when the webview is already closed. Radar bug 8391230 is a case where this crash can occur.
Attachments
Bail out if WebView is closed
(2.32 KB, patch)
2010-09-03 08:12 PDT
,
John Sullivan
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Sullivan
Comment 1
2010-09-03 08:12:41 PDT
Created
attachment 66495
[details]
Bail out if WebView is closed
John Sullivan
Comment 2
2010-09-03 08:34:03 PDT
Landed in
r66733
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug