https://bugs.webkit.org/show_bug.cgi?id=45175 [WebView unmarkAllTextMatches] will crash if the webview is already closed

Reviewed by Dan Bernstein.

Made this and related methods robust against being called when the WebView is closed.

* WebView/WebView.mm:
(-[WebView markAllMatchesForText:caseSensitive:highlight:limit:]):
Bail out if the WebView is closed.
(-[WebView countMatchesForText:caseSensitive:highlight:limit:markMatches:]):
Ditto.
(-[WebView unmarkAllTextMatches]):
Ditto.
(-[WebView rectsForTextMatches]):
Ditto.



Canonical link: https://commits.webkit.org/57492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66733 268f45cc-cd09-0410-ab3c-d52691b4dbfc